/*
 * $Id: ChangeLog,v 1.6138 2008/06/10 22:51:35 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-06-18 07:27 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/arrays.c
    * Corrected silly typo in last commit to hb_arrayEval()

2008-06-10 18:17 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.c
    * Minor revision to last commit

2008-06-09 16:07 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * xharbour/contrib/rdd_ads/makefile.vc
    ! Fixed rules to handle ace32.c

2008-06-09 17:53 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.c
    * Clipper compatability - generate warning for duplicate MEMVAR declaration
      implied by PRIVATE/PUBLIC when -a switch is used.

2008-06-09 09:38 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * makefile.vc
    * ADS correction

  * contrib/rdd_ads/adsfunc.c
    * Type casts

  * source/compiler/cmdcheck.c
    * Minor correction related to W2

  * source/compiler/harbour.c
    * Added missing flaging og VU_USED for aliased vars

2008-06-06 13:12 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * source/vm/estack.c
    * Fixed compile error with Borland when using HB_ARRAY_USE_COUNTER_OFF (ST only)

2008-06-06 08:44 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * makefile.bc
  * makefile.dc
  * makefile.vc
  * makefile.wc
  * common.mak
  * compile.mak
    ! Test if HB_ADS_IMPLIB is defined before polling its value.

2008-06-05 22:57 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * common.mak
  * compile.mak
    * Corrected in consistent and invalid use of !if to !ifdef

  * source/vm/fastitem.c
    * Added few debug asserts

  * include/hbcomp.h
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
    + Added support for:
       -WL[ocals][-]