@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6138 2008/06/10 22:51:35 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.6139 2008/06/18 12:02:07 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-06-18 15:35 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
+   * source/rtl/copyfile.c
+   + tests/testfcpy.prg
+     Add 3rd parameter to __copyfile() as an optional codeblock.
 
 2008-06-18 07:27 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
   * source/vm/arrays.c
